image gallery fix and css style elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,27 @@
+
+
+div.gallery {
+  margin: 5px;
+  border: 2px solid #ccc;
+  float: left;
+  width: 18%;
+    }
+
+div.gallery:hover {
+  border: 3px solid darkgreen;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+
+
 div.heading {
     color: rgb(1, 56, 1)
 }
@@ -9,3 +33,4 @@ div.name {
 div.title {
     color: forestgreen
 }
+
